AUT-1912 WIP Update to Spring Boot 3, update OpenSAML